<resources>
    <string name="app_name">a28AnidandoMenusOpciones</string>
    <string name="menu_home">Inicio</string>
    <string name="menu_info">info</string>
    <string name="features">Storage Settings</string>
    <string name="instalation">Screen Settings</string>
    <string name="info_instalation">information</string>
    <string name="parameters">parameters</string>
    <string name="suported_browsers">suported_browsers</string>
    <string name="menu_brosers1">1</string>
    <string name="css3info">css</string>

    <string name="menu_dowloads">descargas</string>
    <string name="sample1">sampl1</string>
    <string name="sample2">sampl2</string>
    <string name="dowloads">dowloadas</string>
    <string name="samples">samples</string>
    <string name="menu_settings">ajust</string>

</resources>